[package]
name = "data_structures_and_algorithms"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.0"
reqwest = { version = "0.12.12", features = ["blocking", "rustls-tls"] }
scraper = "0.23.1"
thiserror = "2.0.12"

[[bin]]
name = "link_checker"
path = "src/bin/link_checker.rs"

[[bin]]
name = "philosophers"
path = "src/bin/philosophers.rs"
